--- a/Improving.AspNet/Improving.AspNet.nuspec
+++ b/Improving.AspNet/Improving.AspNet.nuspec
@@ -10,16 +10,12 @@
     <iconUrl>https://www.Improving.com/favicon.ico</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Copyright 2016</copyright>
-    <tags>Improving Improving six Six Web web</tags>
+    <copyright>Copyright 2017</copyright>
+    <tags>improving aspnet mvc webapi mediatr</tags>
     <dependencies>
       <group>
         <dependency id="Improving.MediatR"/>
       </group>
     </dependencies>
   </metadata>
-  <files>
-    <file src="bin/release/Improving.AspNet.pdb" target="lib" />
-    <file src="bin/release/Improving.AspNet.CustomInstrumentation.xml" target="content\NewRelicConfigsFromNugetPkgs" />
-  </files>
 </package>
