--- a/Improving.AspNet/packages.config
+++ b/Improving.AspNet/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net452" />
   <package id="FluentValidation.MVC5" version="6.2.1.0" targetFramework="net452" />
   <package id="FluentValidation.WebApi" version="6.2.1.0" targetFramework="net452" />
