nuget requires versions now

--- a/Source/Improving.AspNet/Improving.AspNet.nuspec
+++ b/Source/Improving.AspNet/Improving.AspNet.nuspec
@@ -14,7 +14,7 @@
     <tags>improving aspnet mvc webapi mediatr</tags>
     <dependencies>
       <group>
-        <dependency id="Improving.MediatR"/>
+        <dependency id="Improving.MediatR" version="3.0"/>
       </group>
     </dependencies>
   </metadata>
